--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.15.3"
+    "@astrojs/tailwind": "^6.0.2",
+    "astro": "^5.15.3",
+    "tailwindcss": "^4.1.16"
   }
 }
