--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/image": "^0.18.0",
     "@astrojs/sitemap": "^3.6.0",
     "@astrojs/tailwind": "^6.0.2",
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "astro": "^5.15.3",
     "material-symbols": "^0.39.1"
   },
