Enhance layout, interactions, and styling for better user experience (#4)
* Revamp "Projects" section with updated layout, dynamic project data, and enhanced interactivity; update "Footer" with new navigation links and icons for improved user experience.

* Refactor "Projects" section to dynamically load project data from JSON, simplify layout structure, and optimize images for improved maintainability and performance.

* Enhance `Footer` layout with responsive design, update icons using Material Symbols, and refine navigation structure; add `material-symbols` dependency and configure font in `Layout.astro`.

* Revamp `Navbar` with simplified structure, improved layout, and new language toggle button; remove mobile menu script for streamlined functionality.

* Add "Contact" section with social links, email copy functionality, and dynamic script; update dependencies and styles for FontAwesome integration.

* Implement intersection-based fade-in animations; update section layouts, enhance scrolling, and extend Tailwind config with custom animation.

* Update "Contact" section layout with improved viewport height calculation and class formatting adjustments

* Streamline section layouts by removing redundant utility classes; enhance intersection observer for active section detection, navbar updates, and smooth scrolling behavior.

* Enhance `Layout.astro` with optimized intersection observer for better section visibility control, smooth snapping on scroll, and improved navbar link highlighting behavior; streamline inline script and update active section styling.

* Refactor `Layout.astro` to standardize code style with consistent quotes, streamline inline script structure, and enhance scroll snapping behavior with updated section styling.

* Enhance `Layout.astro` to improve scroll snapping and section visibility by refining intersection observer, ensuring footer visibility during "Contact" section, and standardizing inline script structure and styling.

* Improve scro

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@astrojs/image": "^0.18.0",
     "@astrojs/sitemap": "^3.6.0",
     "@astrojs/tailwind": "^6.0.2",
-    "astro": "^5.15.3"
+    "@fortawesome/fontawesome-free": "^7.1.0",
+    "astro": "^5.15.3",
+    "material-symbols": "^0.39.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.62.0",
