Update `Projects` heading, remove unused headings in `About`, and adjust project link in JSON for consistency and clarity.

--- a/src/content/projects.json
+++ b/src/content/projects.json
@@ -4,7 +4,7 @@
     "tags": ["Vue", "Node.js", "Typescript", "GraphQL"],
     "image": "/images/project-cypher.jpg",
     "links": {
-      "live": "https://www.upwork.com/",
+      "live": "https://www.upwork.com/nx/search/jobs",
       "github": "#"
     }
   },
