Add `sharp` dependency to `package.json` and update `package-lock.json` with related modules

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@astrojs/tailwind": "^6.0.2",
     "@fortawesome/fontawesome-free": "^7.1.0",
     "astro": "^5.15.3",
-    "material-symbols": "^0.39.1"
+    "material-symbols": "^0.39.1",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.62.0",
